--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ body {
     letter-spacing: .06em;
 }
 
-h1, h2 {
+h1, h2, #questions li:before {
     font-family: Cooper;
     font-weight: normal;
 }
@@ -95,6 +95,16 @@ a:active, a:hover, a:focus {
     outline: none;
 }
 
+section header h2 {
+    font-size: 1.5em;
+    line-height: 1.125em;
+    letter-spacing: -.06em;
+}
+
+#questions li {
+    font-size: 1.33em;
+    letter-spacing: .1em;
+} 
 footer li {
     font-size: .75em;
     line-height: 1em;
@@ -227,9 +237,118 @@ label input:active, label input:focus {
 	outline: none;
 }
 label input:hover { background-color: #fff;}
+
+/* Question View
+--------------------------------------- */
+section header {    
+   background: transparent; 
+   float: right;   
+   width: 340px;    
+   margin: 0;  
+   padding: 0;  
+   box-shadow: none;  
+   overflow: visible;
+  }
+
+  section header h2 {     
+    margin: 0 0 .5em;   
+    text-align: left; 
+    }
+
+    section header p {    
+     width: auto;   
+     margin: 0;    
+     text-align: left; 
+     }
+
+     form#ask-a-question,#questions {   
+       width: 596px;    
+        margin: 0;     
+        padding: 0;   
+        overflow: hidden; 
+        }
+
+  #questions { padding-bottom: 1em; }
+
+  #ask-a-question label,#ask-a-question>input { float: left; }
+
+  #ask-a-question label { width: 460px; }
+
+  #ask-a-question label input {    
+     width: 430px;    
+     height: 1.7em;    
+     margin: 0;     
+     padding-left: 15px;  
+     padding-right: 15px; 
+  }
+
+  #ask-a-question input {    
+   height: 1.55em;    
+   margin: 0.5em 0 0 0.5em;    
+   padding: 0.1em 0.75em; 
+  }
+
+  #questions li {    
+   position: relative;    
+    list-style: none;     
+    margin: 0;    
+     padding: 1em 0 1em;     
+     overflow: hidden;     
+     
+   -webkit-box-shadow: 0  12px 16px -16px rgba(31, 27, 12, .3),                         
+     0 -12px 16px -16px rgba(31, 27, 12, .3);             
+     
+   box-shadow: 0  12px 16px -16px rgba(31, 27, 12, .3),                         
+     0 -12px 16px -16px rgba(31, 27, 12, .3);
+
+  }
+
+  #questions p {     
+  float: right;     
+  width: 77%;     
+  margin: .75em 0;     
+  padding: 0;     
+  text-align: left; 
+  }
+
+#questions .vote {     
+  position: relative;     
+  display: block;     
+  width: 76px;     
+  height: 76px;     
+  margin: 0 0 0 2em;     
+  padding: 0;     
+  overflow: hidden; 
+}
+
+#questions .vote input[type="submit"]{
+  margin: 0px;
+  padding-right: 104px;
+  height: 100%;
+  cursor: pointer;
+  text-indent: -9999px;
+  background: url(../images/sprite.jpg) left top no-repeat;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+#questions .vote input:active,
+#questions .vote input:hover,
+#questions .vote input:focus {
+  background-position: left bottom;
+}
+
+#questions li:before {
+  content: attr(data-count);
+  position: absolute;
+  left: 0;
+  top: 50%;
+  margin-top: -.5em;
+}
 /* Media queries
 ----------------------------------*/
 @media screen and(max-width: 960px) {
+   
     header h1, header p {
         width: 760px;
     }
@@ -238,13 +357,33 @@ label input:hover { background-color: #fff;}
         padding: .75em 0 1.2em;
     }
 
-    section { width: 740px; }
-
+    
+    section header {
+      float: none;
+      width: 680px;
+      margin: 0 auto 1.5em;
+      overflow: hidden;
+    }
     p { margin: 0 0 2em; padding: 0; }
 
     header>p, section>p { font-size: .875em; }
 
     form { width: 340px; padding: 0 8px; }
+    
+    form#ask-a-question {
+      float: none;
+      width: 680px;
+      margin: 0 auto 1em;
+
+    }
+
+    #ask-a-question label { width: 80%; }
+
+    #ask-a-question input { font-size: 1.75em; }
+
+    label input, #ask-a-question label input { width: 91%; }
+
+    #questions { margin: 0 auto; }
 
     form p { font-size: 1em; }
 
@@ -275,7 +414,9 @@ label input:hover { background-color: #fff;}
         width: 90%;
         min-width: 300px;
     }
-
+  
+    section, section header, form#ask-a-question, #questions { width: 300px; }
+    
     header {
         padding-bottom: .75em;
     }
@@ -284,17 +425,36 @@ label input:hover { background-color: #fff;}
         font-size: 2.4em;
     }
     
-    form, form#attending {
+    form, form#attending, form#ask-a-question {
     	float: none;
     	width: 90%;
     	margin: 0 auto 3em;
     }
+    
+    form#ask-a-question { overflow: visible; }
 
     form p {
     	font-size: .75em;
     }
 
     label input { width: 88%; font-size: 1.6em; }
+    
+    #ask-a-question label { width: 270px; }
+
+    #ask-a-question label input { width: 87%; }
+
+    #ask-a-question input {
+      float: none;
+      margin: 0 auto;
+    }
+
+    #questions li { font-size: 1.125em; line-height: 1.125em; }
+
+    #questions li:before { top: 20px; left: 24px; margin-top: 0; }
+
+    #questions .vote { margin: 20px 0 0; }
+
+    #questions p { width: 210px; margin: 0; }
     footer {
         margin-top: 3em;
     }
